fix to allow scrollbar on logs page

--- a/raspberry-backend/static/css/style_v3.css
+++ b/raspberry-backend/static/css/style_v3.css
@@ -54,10 +54,45 @@ html {
     font-family: sans-serif;
     font-size: 26px;
     line-height: 1.15;
-    height:100%;
+    /*height:100%;*/
     -webkit-text-size-adjust: 100%;
     -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
 }
+
+.no-scroll-lock{
+    overflow:visible;
+}
+
+
+@media (min-width: 576px) {
+    html {
+      font-size: 13px;
+  }
+}
+@media (min-width: 768px) {
+    html {
+	font-size: 16px;
+    }
+}
+@media (min-width: 992px) {
+    html {
+	font-size: 20px;
+    }
+}
+@media (min-width: 1200px) {
+    html{
+	font-size: 24px;
+	
+    }
+}
+@media (min-width: 1300px) {
+    html{
+	font-size: 26px;
+	
+    }
+}
+
+
 
 article, aside, figcaption, figure, footer, header, hgroup, main, nav, section {
   display: block;
@@ -1115,6 +1150,11 @@ pre code {
     max-width: 41.6666666667%;
   }
 
+  .col-md-5b {
+    flex: 0 0 47.5%;
+    max-width: 47.5%;
+  }
+
   .col-md-6 {
     flex: 0 0 50%;
     max-width: 50%;
@@ -1518,8 +1558,8 @@ pre code {
   }
 
   .col-xl-2 {
-    flex: 0 0 16.6666666667%;
-    max-width: 16.6666666667%;
+      flex: 0 0 16.6666666667%;
+      max-width: 16.6666666667%;
   }
 
   .col-xl-3 {
@@ -10013,9 +10053,7 @@ h3 {
     border-color: #dee2e6;
   }
 }
-html,
-body {
-    max-height: 100%;
+html, body {
     overflow: hidden;
 }
 
@@ -10344,3 +10382,7 @@ div.active{
 .min-height-1b{min-height:1.75rem;}
 .min-height-2{min-height:2rem;}
 .min-height-6{min-height:6rem;}
+.float-bottom{
+    position: absolute; 
+    bottom: 0;
+}
